Fix scrollbars for windows

--- a/less/app.less
+++ b/less/app.less
@@ -478,7 +478,8 @@ a.nav-btn  {
     }
     .modal-body {
         max-height: 100%;
-        overflow-y: scroll;
+        overflow-y: auto;
+        -webkit-overflow-scrolling: touch;
         padding: 66px 22px 33px 22px;
         color: #aaa;
         text-align: center;
@@ -617,7 +618,7 @@ a.nav-btn  {
 
     #browse-list {
         max-height: 100%;
-        overflow: scroll;
+        overflow: auto;
         -webkit-overflow-scrolling: touch;
     }
 
@@ -646,7 +647,7 @@ a.nav-btn  {
 	    &#modal-intro {
 	        min-height: auto;
             max-height: 100%;
-            overflow: scroll;
+            overflow: auto;
 	        h1 { font-size: 30px; margin-bottom: 8px;}
             h2 { font-size: 18px; margin-bottom: 8px;}
 	        p { font-size: 16px; margin-bottom: 5px; }
